[package]
name = "preprocessing_mpsi_with_vole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocelot = { git = "https://github.com/GaloisInc/swanky", rev = "bf632dbbf01ca1cce26a348f0e65391ed51c4ac2" }
popsicle = { git = "https://github.com/GaloisInc/swanky", rev = "bf632dbbf01ca1cce26a348f0e65391ed51c4ac2" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky", rev = "bf632dbbf01ca1cce26a348f0e65391ed51c4ac2" }
rand = "0.8.5"
itertools = "0.12.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
num-traits = "0.2.17"
sha2 = "0.10.8"
typenum = "1.17.0"
crossbeam = "0.8.2"
generic-array = "0.14.7"
clap = { version = "4.5.2", features = [ "derive" ] }

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "kmprt"
path = "src/kmprt17/main.rs"

[[bin]]
name = "prep_psi"
path = "src/preprocessed/psi/main.rs"

[[bench]]
name = "time_benchmark"
harness = false

[[bench]]
name = "time_benchmark_compare"
harness = false

[[bench]]
name = "time_benchmark_mt_compare"
harness = false
